[gd_scene load_steps=19 format=3 uid="uid://bymlibi56fbns"]

[ext_resource type="Texture2D" uid="uid://bwl15owh5xmve" path="res://Assets/Art/Player/Bugguyspaceidleanimation-Sheet.png" id="1_uoqpp"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_w4gtp"]
[ext_resource type="PackedScene" uid="uid://dawh1x2sdyb8f" path="res://Scenes/Player/shooter.tscn" id="3_wrwev"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4bnp"]
size = Vector2(9.5, 24.5)

[sub_resource type="Animation" id="Animation_v0obe"]
resource_name = "Hurt"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [16, 17, 18]
}

[sub_resource type="Animation" id="Animation_rx84u"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_mf10d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kkp45"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_awxvu"]
resource_name = "fall"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_f0isu"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t7mnf"]
_data = {
"Hurt": SubResource("Animation_v0obe"),
"Idle": SubResource("Animation_rx84u"),
"RESET": SubResource("Animation_mf10d"),
"Run": SubResource("Animation_kkp45"),
"fall": SubResource("Animation_awxvu"),
"jump": SubResource("Animation_f0isu")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_edaqc"]
radius = 4.0
height = 22.0

[sub_resource type="Animation" id="Animation_ee47q"]
resource_name = "Invincible"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.313726), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yhkwb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uvx2d"]
_data = {
"Invincible": SubResource("Animation_ee47q"),
"RESET": SubResource("Animation_yhkwb")
}

[sub_resource type="LabelSettings" id="LabelSettings_sy6ut"]
font_size = 256

[sub_resource type="LabelSettings" id="LabelSettings_rgsmq"]
font_size = 320
font_color = Color(1, 0.0235294, 0.0980392, 1)
outline_size = 25
shadow_size = 40
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_baajb"]
font_size = 256

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 33
script = ExtResource("1_w4gtp")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.2, 2.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_q4bnp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uoqpp")
hframes = 19

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t7mnf")
}
autoplay = "Idle"

[node name="Hithox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hithox"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_edaqc")

[node name="Sounds" type="AudioStreamPlayer2D" parent="."]

[node name="Shooter" parent="." instance=ExtResource("3_wrwev")]
speed = 250.0
lifespan = 0.1

[node name="Invincibility" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uvx2d")
}

[node name="AhhparytheplatypusthisismySIGMAINATOR" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Menu" type="ColorRect" parent="."]
process_mode = 3
z_index = 1
offset_left = -56.0
offset_top = -80.0
offset_right = -16.0
offset_bottom = -35.0
scale = Vector2(2.64432, 2.62916)
color = Color(0.462291, 0.462291, 0.462291, 1)

[node name="Label" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 10.5887
offset_right = 720.589
offset_bottom = 349.0
scale = Vector2(0.0293976, 0.0350075)
text = "Menu"
label_settings = SubResource("LabelSettings_sy6ut")

[node name="Exit" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 12.07
offset_top = 34.7052
offset_right = 125.07
offset_bottom = 65.7052
scale = Vector2(0.161149, 0.173797)
text = "Exit"

[node name="Settings" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 12.1014
offset_top = 22.821
offset_right = 125.101
offset_bottom = 53.821
scale = Vector2(0.161149, 0.173797)
text = "Settings
"

[node name="ResetLevel" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 12.07
offset_top = 28.7052
offset_right = 125.07
offset_bottom = 59.7052
scale = Vector2(0.161149, 0.173797)
text = "Reset level"

[node name="Return" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 12.07
offset_top = 11.41
offset_right = 125.07
offset_bottom = 42.41
scale = Vector2(0.161149, 0.173797)
text = "Return"

[node name="Upgrades" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 12.07
offset_top = 17.116
offset_right = 125.07
offset_bottom = 48.116
scale = Vector2(0.161149, 0.173797)
text = "Upgrades"

[node name="UpgradeMenu" type="ColorRect" parent="Menu"]
visible = false
layout_mode = 0
offset_left = 8.31972
offset_top = 22.0603
offset_right = 34.3197
offset_bottom = 54.0603
color = Color(0.525101, 0.525101, 0.525101, 1)

[node name="JumpUp1" type="CheckButton" parent="Menu/UpgradeMenu"]
layout_mode = 0
offset_left = -0.378169
offset_top = 4.18385
offset_right = 182.622
offset_bottom = 35.1838
scale = Vector2(0.145607, 0.129829)
text = "Jump Upgrade #1"

[node name="JumpUp2" type="CheckButton" parent="Menu/UpgradeMenu"]
layout_mode = 0
offset_left = -0.378169
offset_top = 6.84627
offset_right = 182.622
offset_bottom = 37.8463
scale = Vector2(0.145607, 0.129829)
text = "Jump Upgrade #2"

[node name="BulletSpeed" type="CheckButton" parent="Menu/UpgradeMenu"]
layout_mode = 0
offset_left = -0.378169
offset_top = 10.2694
offset_right = 182.622
offset_bottom = 41.2694
scale = Vector2(0.145607, 0.129829)
text = "Bullet Speed up"

[node name="WalkSpeed" type="CheckButton" parent="Menu/UpgradeMenu"]
layout_mode = 0
offset_top = 13.0
offset_right = 184.0
offset_bottom = 44.0
scale = Vector2(0.146, 0.13)
text = "Walk Speed Up"

[node name="GravityDown" type="CheckButton" parent="Menu/UpgradeMenu"]
layout_mode = 0
offset_top = 16.8035
offset_right = 184.0
offset_bottom = 47.8035
scale = Vector2(0.146, 0.13)
text = "Gravity Down"

[node name="CloseButton" type="Button" parent="Menu/UpgradeMenu"]
layout_mode = 0
offset_left = 0.756338
offset_top = 1.14105
offset_right = 26.7563
offset_bottom = 32.141
scale = Vector2(0.117898, 0.0944752)
text = "X"

[node name="SettingMenu" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_left = 11.0
offset_top = 27.0
offset_right = 31.0
offset_bottom = 50.0
color = Color(0.621524, 0.621524, 0.621524, 1)

[node name="SettingLabel" type="Label" parent="Menu/SettingMenu"]
layout_mode = 0
offset_left = 3.74859
offset_top = 0.00482297
offset_right = 993.749
offset_bottom = 349.005
scale = Vector2(0.0128882, 0.0153476)
text = "Settings"
label_settings = SubResource("LabelSettings_sy6ut")

[node name="Volume" type="HSlider" parent="Menu/SettingMenu"]
layout_mode = 0
offset_left = 4.8831
offset_top = 6.47077
offset_right = 91.8831
offset_bottom = 22.4708
scale = Vector2(0.119129, 0.119129)
min_value = 0.9
max_value = 3.0
step = 0.1
value = 2.0

[node name="Close2" type="Button" parent="Menu/SettingMenu"]
layout_mode = 0
offset_left = 0.723241
offset_top = 0.765522
offset_right = 29.7232
offset_bottom = 31.7655
scale = Vector2(0.070948, 0.070948)
text = "x"

[node name="LifeLabel" type="Label" parent="."]
z_index = 1
offset_left = -207.0
offset_top = -122.0
offset_right = -31.0
offset_bottom = 315.0
scale = Vector2(0.117848, 0.122644)
text = "S"
label_settings = SubResource("LabelSettings_rgsmq")

[node name="ColorRect2" type="ColorRect" parent="LifeLabel"]
show_behind_parent = true
layout_mode = 0
offset_left = 209.525
offset_top = 426.68
offset_right = 249.525
offset_bottom = 466.68
scale = Vector2(-6.41917, -9.69473)
color = Color(0.211338, 0.278106, 0.312957, 1)

[node name="Label" type="Label" parent="LifeLabel"]
layout_mode = 0
offset_left = -33.942
offset_top = 8.1537
offset_right = 417.058
offset_bottom = 357.154
scale = Vector2(0.494838, 0.222653)
text = "Life"
label_settings = SubResource("LabelSettings_baajb")

[node name="CoinsLabel" type="Label" parent="."]
z_index = 1
offset_left = -175.0
offset_top = -122.0
offset_right = 1.0
offset_bottom = 315.0
scale = Vector2(0.117848, 0.122644)
text = "S"
label_settings = SubResource("LabelSettings_rgsmq")

[node name="ColorRect2" type="ColorRect" parent="CoinsLabel"]
show_behind_parent = true
layout_mode = 0
offset_left = 526.101
offset_top = 423.991
offset_right = 566.101
offset_bottom = 463.991
scale = Vector2(-14.4622, -9.69473)
color = Color(0.211338, 0.278106, 0.312957, 1)

[node name="Label" type="Label" parent="CoinsLabel"]
layout_mode = 0
offset_left = -33.942
offset_top = 8.1537
offset_right = 417.058
offset_bottom = 357.154
scale = Vector2(0.494838, 0.222653)
text = "Coins"
label_settings = SubResource("LabelSettings_baajb")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="Hithox" to="." method="_on_hithox_area_entered"]
[connection signal="timeout" from="AhhparytheplatypusthisismySIGMAINATOR" to="." method="_on_ahhparytheplatypusthisismy_sigmainator_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Menu/ResetLevel" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Menu/Return" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Menu/Upgrades" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Menu/UpgradeMenu/JumpUp1" to="." method="_on_jump_up_1_pressed"]
[connection signal="pressed" from="Menu/UpgradeMenu/JumpUp2" to="." method="_on_jump_up_2_pressed"]
[connection signal="pressed" from="Menu/UpgradeMenu/BulletSpeed" to="." method="_on_bullet_speed_pressed"]
[connection signal="pressed" from="Menu/UpgradeMenu/WalkSpeed" to="." method="_on_walk_speed_pressed"]
[connection signal="pressed" from="Menu/UpgradeMenu/GravityDown" to="." method="_on_gravity_down_pressed"]
[connection signal="pressed" from="Menu/UpgradeMenu/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Menu/SettingMenu/Close2" to="." method="_on_close_2_pressed"]
